[package]
name = "volkanicmc-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = "0.7.7"
bollard = "0.17.1"
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3.31"
hyper = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_jsonc = "1.0.108"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }

[profile.dev]
lto = "off"
opt-level = 0
incremental = true
debug = 2

[profile.release]
lto = "thin"
opt-level = 3
incremental = false
debug = 0
strip = true
