[package]
name = "volkanicmc-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = "0.7.9"
bollard = "0.18.0"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
futures-util = "0.3.31"
hyper = "1.5.0"
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_jsonc = "1.0.108"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.dev]
lto = "off"
opt-level = 0
incremental = true
debug = 2

[profile.release]
lto = "thin"
opt-level = 3
incremental = false
debug = 0
strip = true
